--- a/app/views/pitches/pitch_onboarding_claim.js.erb
+++ b/app/views/pitches/pitch_onboarding_claim.js.erb
@@ -1,5 +1,5 @@
 $('.spinner-button').addClass("hide");
-$("#basicExampleModal").modal('toggle');
+$("#TTM-Modal").modal('toggle');
 $('.claim_pitch_wrapper').empty();
 $('.claim_pitch_wrapper').append('<%= j render partial: "users/onboarding/next_steps_partials/selected_pitch", locals: {pitch: @pitch} %>');
 $('#onboarding_button').removeClass("disabled");
