--- a/app/views/users/dashboard/tabs/articles/_published_articles_page.html.erb
+++ b/app/views/users/dashboard/tabs/articles/_published_articles_page.html.erb
@@ -8,6 +8,14 @@
         <p class="card-text">
           <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg> <%= post.post_impressions %> views
         </p>
+        <% if post.promoting_until.present? && post.promoting_until > Time.now %>
+          <div class="alert alert-info vertical-align-container" role="alert">
+            <p class="m-0 pr-4">
+              <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="fire" class="mb-1 svg-inline--fa fa-fire fa-w-12" role="img" viewBox="0 0 384 512"><path fill="currentColor" d="M216 23.86c0-23.8-30.65-32.77-44.15-13.04C48 191.85 224 200 224 288c0 35.63-29.11 64.46-64.85 63.99-35.17-.45-63.15-29.77-63.15-64.94v-85.51c0-21.7-26.47-32.23-41.43-16.5C27.8 213.16 0 261.33 0 320c0 105.87 86.13 192 192 192s192-86.13 192-192c0-170.29-168-193-168-296.14z"></path></svg>
+              Promoting ends in <%= time_ago_in_words(post.promoting_until) unless post.promoting_until.blank? %>
+            </p>
+          </div>
+        <% end %>
       </div>
     </div>
   <% end %>
