--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -23,16 +23,16 @@ blockquote {
   <div class="post_image">
   </div>
 </div>
-<div class="flex_wrapper_posts">
+<div class="flex_wrapper_posts mb-4">
   <div class="skinny wrapper_padding" id="post_show_content">
     <div class="flex_wrapper_columns">
       <div class="content_wrapper">
         <header id="post_title_show">
           <h1 class="title_article_show"><%= @post.title %></h1>
           <h3 id="category_title"><%= link_to(@post.category.name, @post.category) %></h3>
-          <div class="post_info post_info_published">
+          <div class="post_info">
             <% @authors = [@user] + @collabs %>
-            <div class="left_side_flex <% if @authors.count == 2 %>flex_column<%end%>">
+            <div class="left_side_flex">
               <% @authors.each do |author| %>
                 <div class="author">
                   <% @profile = author.profile.exists? ? author.profile.url(:square) : "profile_image.jpg" %>
@@ -42,14 +42,13 @@ blockquote {
               <% end %>
             </div>
             <div class="right_side_wrapper <% if @authors.count == 1 %>right_side_flex<% end %>">
-              <div class="date_wrapper published">
+              <div class="date_wrapper draft date_wrapper_draft">
                 <p>
-                  <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="far" data-icon="clock" class="mr-1 mb-1 svg-inline--fa fa-clock fa-w-16" role="img" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path></svg>
+                  <svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="far" data-icon="clock" class="mr-1 mb-1 svg-inline--fa fa-clock fa-w-16" role="img" viewBox="0 0 512 512">
+                    <path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"></path>
+                  </svg>
                 </p>
                 <p class="date"><%= @date.in_time_zone.strftime('%A, %B %d')%></p>
-              </div>
-              <div class="social_icons">
-                <%= render "posts/partials/share_social" %>
               </div>
             </div>
           </div>
@@ -57,41 +56,40 @@ blockquote {
         <div id="content">
           <div class="flex_wrapper_content">
             <div class="post_wrapper">
-              <div class="post_content lazy">
-                <%= markdown @post.content %>
+              <div id="selectable_content" class="post_content">
+                  <%= markdown @post.content %>
               </div>
-              <p class="mt-0 mb-4"><i>Did you enjoy reading <%= @post.user.full_name %>'s article? Let your friends know by using any of the sharing options below.</i></p>
-              <div class="social_icons social_icons_full">
-                <%= render "posts/partials/share_social" %>
-              </div>
-              <% if current_user && (current_user.id == @post.user_id || (@post.collaboration&.include? current_user.email) || current_user.admin? || (@post.reviews.last.editor_id.eql? current_user.id)) %>
+              <% if current_user && (current_user.id == @post.user_id || (@post.collaboration&.include? current_user.email) || current_user.admin?) %>
                 <div id="admin_links" style="border-top: 1px solid #E9E9E9;border-bottom: 1px solid #E9E9E9;text-align: center;padding: 1em 0;margin: 1em 0;margin-top: 0;">
-                  <%= link_to "Edit Article", edit_post_path(@post), style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
+                  <% if !(@post.is_locked?) %>
+                    <%= link_to "Edit Article", edit_post_path(@post), style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
+                  <% end %>
                   <% if current_user && (current_user.id == @post.user_id || current_user.admin) %>
                     <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this article?"}, style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
                   <% end %>
                 </div>
               <% end %>
-              <div id= "background" class="mb-4">
-               <%= render :partial => 'users/profile', locals: {user: @user}, cached: true %>
+              <div id= "background">
+               <%= render :partial => 'users/profile', locals: {user: @user} %>
                <% @collabs.each do |collab| %>
-                <%= render :partial => 'users/profile', locals: {user: collab}, cached: true %>
+                <%= render :partial => 'users/profile', locals: {user: collab} %>
                <% end %>
               </div>
             </div>
+          </div>
         </div>
       </div>
-  </div>
-  <div class="post_apply mb-4">
-    <div class="articles">
-      <div class="flex_other_articles">
-        <h3>Recommended in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
-        <%= render_async_cache get_trending_posts_in_category_path(id: @post.id) %>
+      <div class="post_apply">
+        <div class="articles">
+          <div class="flex_other_articles">
+            <h3>Recommended in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
+            <%= render_async_cache get_trending_posts_in_category_path(id: @post.id) %>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
 <script>
 $(document).ready(function() {
    $('.fb-share').click(function(e) {
