--- a/app/views/welcome/partials/_recents.html.erb
+++ b/app/views/welcome/partials/_recents.html.erb
@@ -1,5 +1,5 @@
 <div class="ctgry_section">
-  <% posts.each do |post| %>
+  <% @posts_promoted.each do |post| %>
     <div class="ctgry_article recent mt-4 mb-4">
       <%=link_to(image_tag(post.thumbnail.url(:large), alt: post.title, class: "image_recent_articles"), post )%>
       <h1><%= link_to post.title, post %></h1>
