--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -1,7 +1,7 @@
 <header id="main_navigation" class="clearfix header-navigation hide-on-mobile">
-  <!-- <div class="banner_stts_relative">
-    <p class= "banner_stts" style="background-color: #F0255E;">The Teen Magazine's May Issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
-  </div> -->
+  <div class="banner_stts_relative">
+    <p class= "banner_stts" style="background-color: #F0255E;">The Teen Magazine's August Issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
+  </div>
   <div id="banner" class="banner-relative">
     <div class="flex-1">
       <svg width="20px" height="20px" onclick="toggleNav();" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="toggle-nav svg-inline--fa fa-bars fa-w-14" role="img" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg>
