--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -1,6 +1,6 @@
 <%= image_tag "subscribe_background.jpg", id: "banner_writing" %>
 <div class="apply_wrapper">
-  <h2>The Teen Magazine · May Issue</h2>
+  <h2>The Teen Magazine · August Issue</h2>
     <br>
   <h4><i>A special thanks to this month's magazine issue writers and designers:</i></h4>
   <span>
@@ -14,13 +14,13 @@
   </span>
   <br>
   <br>
-  <%= image_tag("may_2021_cover.png", :class => "image_fit_scrn") %>
+  <%= image_tag("issue_cover.png", :class => "image_fit_scrn") %>
   <br>
   <br>
   <h4><i>Enter your email to receive this month's magazine issue:</i></h4>
 
 <!--End mc_embed_signup-->
-  <%= form_for(:pages, url:"/may_2021_tlGBoVMpUl-plNiPQNtMe-vGpXaueoqO-sNXaXqCOzW") do |f| %>
+  <%= form_for(:pages, url:"/august-2021-bexesyjj-bxducjpuj-hrhhqug-xqkoktbve") do |f| %>
     <br>
     <%= f.check_box :sub, :checked => true %>
     <span>Subscribe to The Teen Magazine newsletter and receive all future monthly issues.</span>
@@ -29,7 +29,7 @@
     <%= f.text_field :email, placeholder: "Email Address", :style => "margin-bottom: 25px;", required: true, id: "email", onkeyup: "isFormButtonDisabled('#email')"%>
     <br>
     <div class="btn_cntnr" style="float: none; position: relative; padding-bottom: 0;">
-      <%= f.button "Get May Issue", class: "newpost--new--profile submit_modal disabled", id: "submit-comment-modal-button" %>
+      <%= f.button "Get August Issue", class: "newpost--new--profile submit_modal disabled", id: "submit-comment-modal-button" %>
     </div>
   <% end %>
 
