--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -7,10 +7,11 @@
     <%= link_to("Malak Yousry - Creative Director", "https://theteenmagazine.com/writers/malak-yousry", :target => "_blank", :class => "link_nrml") %>,
     <%= link_to("Khushi Gupta - Creative Director", "https://theteenmagazine.com/writers/khushi-gupta", :target => "_blank", :class => "link_nrml") %>,
     <%= link_to("Jane Park - Visual Designer", "https://theteenmagazine.com/writers/jane-park", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Jessica Zhu - Visual Designer", "https://theteenmagazine.com/writers/jessica-zhu", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Jennifer Xia - Visual Designer", "https://theteenmagazine.com/writers/jennifer-xia", :target => "_blank", :class => "link_nrml") %>,
-    <%= link_to("Nameeda Elmi - Visual Designer", "https://theteenmagazine.com/writers/nameeda-elmi", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Nameeda Elmi - Visual Designer", "https://www.theteenmagazine.com/writers/nameeda-elmi", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Madison Yee - Visual Designer", "https://www.theteenmagazine.com/writers/madison-yee", :target => "_blank", :class => "link_nrml") %>,
     <%= link_to("Chayanon Kesorn - Visual Designer", "https://www.theteenmagazine.com/writers/chayanon-kesorn", :target => "_blank", :class => "link_nrml") %>
+    <%= link_to("Devika Rathore - Visual Designer", "https://www.theteenmagazine.com/search?utf8=%E2%9C%93&filter=writers", :target => "_blank", :class => "link_nrml") %>,
+    <%= link_to("Sameeksha Jayram - Visual Designer", "https://www.theteenmagazine.com/search?utf8=%E2%9C%93&filter=writers", :target => "_blank", :class => "link_nrml") %>
   </span>
   <br>
   <br>
