--- a/app/assets/stylesheets/mdbootstrap/css/mdb.lite.css
+++ b/app/assets/stylesheets/mdbootstrap/css/mdb.lite.css
@@ -1725,7 +1725,7 @@ ul.stepper li.warning a .circle {
 }
 
 a {
-    color: #007bff;
+    color: #F0255E;
     text-decoration: none;
     cursor: pointer;
     -webkit-transition: all 0.2s ease-in-out;
@@ -1741,7 +1741,7 @@ a:hover {
 
 a.disabled:hover,
 a:disabled:hover {
-    color: #007bff
+    color: #F0255E
 }
 
 a:not([href]):not([tabindex]),
@@ -12932,11 +12932,11 @@ label.btn input[type="checkbox"]:disabled:checked+label:after {
 
 .select-wrapper.active span.caret,
 .select-wrapper.active label.mdb-main-label {
-    color: #007bff
+    color: #F0255E
 }
 
 .select-wrapper.active+label {
-    color: #007bff
+    color: #F0255E
 }
 
 .select-wrapper input.select-dropdown {
@@ -13809,7 +13809,7 @@ select:disabled {
 }
 
 .mdb-autocomplete:focus~label {
-    color: #007bff
+    color: #F0255E
 }
 
 button:focus {
