--- a/app/views/users/dashboard/tabs/_earn_points.html.erb
+++ b/app/views/users/dashboard/tabs/_earn_points.html.erb
@@ -2,7 +2,7 @@
   <div class="pitch_form_wrapper pt-4">
     <h3 class="mb-3">Invite a friend to earn credits.</h3>
     <p>
-      Earn <b>1</b> promotion credit for every accepted friend you invite.
+      Earn <b>1</b> promotion credit for friend you invite who applies to The Teen Magazine.
     </p>
     <%= form_for invitation, :remote=>true do |f| %>
       <% if invitation.errors.any? %>
@@ -26,20 +26,8 @@
       </div>
       <small>
         When you click <i>Send Invite</i>, we will send an email inviting your friend(s) to apply to The Teen Magazine. The email will include a special apply link from you that will waive the cover letter and prioritize their application for review.
-        The referral link will expire in 1 week so they must apply before then to benefit from the easier application.
+        The referral link will expire in 1 week so they must apply before then to benefit from the easier application. For you to earn a promotional credit, your friend must submit their application to The Teen Magazine.
       </small>
-    <% end %>
-    <h5 class="mb-3 font-weight-bold mt-4 pt-2">Past Invites</h5>
-    <% if @user.invitations.count.eql? 0 %>
-      <p>You haven't sent any invitations yet. Visit the "Earn Credits" tab to send your first invite.</p>
-    <% else %>
-      <%= render_async_cache get_past_invites_path(id: @user.id), container_class: "pl-0", toggle: { selector: '#earn-points-tab-classic', event: :click } do %>
-        <div class="d-flex justify-content-center">
-          <div class="spinner-border" role="status">
-            <span class="sr-only">Loading...</span>
-          </div>
-        </div>
-      <% end %>
     <% end %>
   </div>
 </div>
