--- a/app/assets/stylesheets/_used_bootstrap.css.scss
+++ b/app/assets/stylesheets/_used_bootstrap.css.scss
@@ -25,6 +25,20 @@
 
 // margins
 
+.mx-auto {
+  margin-right: auto !important;
+}
+
+.mb-auto,
+.my-auto {
+  margin-bottom: auto !important;
+}
+
+.ml-auto,
+.mx-auto {
+  margin-left: auto !important;
+}
+
 .mt-4 {
   margin-top: 1.5rem !important;
 }
@@ -79,6 +93,27 @@ footer.page-footer .footer-copyright {
 
 footer.page-footer a {
   color: #fff
+}
+
+.badge {
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  display: inline-block;
+  padding: 0.4em 0.6em;
+  font-size: 75%;
+  font-weight: 700;
+  line-height: 1;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  color: white !important;
+  border-radius: .125rem;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .16), 0 2px 10px 0 rgba(0, 0, 0, .12);
+}
+
+.bg-primary {
+  background-color: #F0255E !important;
 }
 
 // responsive
