--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -36,6 +36,22 @@
           </div>
           <div class="tab-pane activity_wrapper fade" id="earn-points-classic" role="tabpanel" aria-labelledby="earn-points-tab-classic">
             <%= render 'users/dashboard/tabs/earn_points', invitation: @invitation %>
+            <div id="past-invites">
+              <div class="mr-4 mb-4" style="margin-top: -30px;">
+                <h5 class="mb-3 font-weight-bold mt-4 pt-2">Past Invites</h5>
+                <% if @user.invitations.count.eql? 0 %>
+                  <p>You haven't sent any invitations yet. Visit the "Earn Credits" tab to send your first invite.</p>
+                <% else %>
+                  <%= render_async_cache get_past_invites_path(id: @user.id), container_class: "pl-0", toggle: { selector: '#earn-points-tab-classic', event: :click } do %>
+                    <div class="d-flex justify-content-center">
+                      <div class="spinner-border" role="status">
+                        <span class="sr-only">Loading...</span>
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
+              </div>
+            </div>
           </div>
           <% if @user.admin? %>
             <div class="tab-pane activity_wrapper fade" id="admin-invites-classic" role="tabpanel" aria-labelledby="admin-invites-tab-classic">
