--- a/app/views/users/dashboard/tabs/articles/_preview_post.html.erb
+++ b/app/views/users/dashboard/tabs/articles/_preview_post.html.erb
@@ -1,4 +1,4 @@
-<div class="modal fade" id="TTM-Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="TTM-Modal" tabindex="-1" role="dialog"
   aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
     <div class="modal-content">
@@ -9,7 +9,7 @@
         </button>
       </div>
       <div class="comment_form_wrapper">
-        <div class="pitch_preview_wrapper pt-2">
+        <div class="published-article-modal pitch_preview_wrapper pt-2">
           <div class="flex_child mr-3">
             <%= link_to image_tag(post.thumbnail.url(:large2), class: "image_half_left mb-4"), post %>
           </div>
@@ -27,22 +27,21 @@
                 You have <b><%= user.promotions %> promotion credit<% if !(user.promotions.eql? 1) %>s<% end %></b> available
               <% end %>
             </div>
-            <div class="rounded-bottom lighten-3 text-right">
+            <p>When you promote an article, your article will be shown under "Also on The Teen Magazine" section under every article on The Teen Magazine.</p>
+            <div style="margin: 0 0 40px auto;" class="rounded-bottom lighten-3 text-right">
               <% @is_promoted = @post.promoting_until.present? && @post.promoting_until > Time.now %>
               <% @class = @user.promotions < 1 ? "disabled" : "" %>
               <% if @is_promoted %>
-                <div class="btn_cntnr mb-0 pb-0">
+                <div class="btn_cntnr mb-0">
                   <%= link_to "Extend (1 credit)", promote_post_path(:id => @user.id, :post_id => post.id), method: :patch, remote: true, data: {confirm: "This article is already being promoted and will be extended by 1 week. You are using 1 credit out of your available #{user.promotions} credits to do this. Do you want to continue?"}, class: "newpost--new--profile #{@class} mr-1" %>
                 </div>
               <% else %>
-                <div class="btn_cntnr mb-0 pb-0">
+                <div class="btn_cntnr mb-0">
                   <%= link_to "Promote (1 credit)", promote_post_path(:id => @user.id, :post_id => post.id), method: :patch, remote: true, data: {confirm: "This article will be promoted across the entire website under More on The Teen Magazine for 1 week. You are using 1 credit out of your available #{user.promotions} credits to do this. Do you want to continue?"}, class: "newpost--new--profile #{@class} mr-1" %>
                 </div>
               <% end %>
             </div>
           </div>
-        </div>
-        <div class="btn_cntnr mb-0 pb-0">
         </div>
       </div>
     </div>
