--- a/app/views/users/dashboard/tabs/articles/_preview_post_confirmation.html.erb
+++ b/app/views/users/dashboard/tabs/articles/_preview_post_confirmation.html.erb
@@ -1,6 +1,6 @@
 <div class="modal-body pt-0" style="min-width: 80%;">
   <h3 class="mt-0 mb-3 text-center">Hooray, your article is being promoted! 🚀</h3>
-  <p class="text-center">Your article is now being recommended to thousands of readers on The Teen Magazine. You can see the status of your article at any time under the Boost an Article tab. To see where your article is being promoted, scroll down to the section labeled <b>Also on The Teen Magazine</b> on any published article. </p>
+  <p class="text-center">Your article is now being recommended to thousands of readers on The Teen Magazine. You can see the status of your article at any time under the Boost an Article tab. To see where your article is being promoted, scroll down to the section labeled <b>More on The Teen Magazine</b> on any published article. </p>
   <?xml version="1.0" encoding="UTF-8"?>
   <svg class="d-block mx-auto mt-2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="80%" height="280px" viewBox="0 0 1296 1295.99994" version="1.2">
   <defs>
