--- a/app/views/posts/partials/promoted/_all_promoted_articles.html.erb
+++ b/app/views/posts/partials/promoted/_all_promoted_articles.html.erb
@@ -1,6 +1,6 @@
 <div class="body welcome">
   <div class="wrapper_home">
-    <h1 id="promoted-posts-title" class="section--title"><a href="/">Also on The Teen Magazine</a></h1>
+    <h1 id="promoted-posts-title" class="section--title"><a href="/">More on The Teen Magazine</a></h1>
     <div id="promoted-posts" class="ctgry_section">
       <%= render partial: 'posts/partials/promoted/promoted_page' %>
     </div>
