--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -35,14 +35,16 @@
             <%= render 'users/dashboard/tabs/be_promoted' %>
           </div>
           <div class="tab-pane activity_wrapper fade" id="earn-points-classic" role="tabpanel" aria-labelledby="earn-points-tab-classic">
-            <%= render 'users/dashboard/tabs/earn_points', invitation: @invitation %>
-            <div id="past-invites">
-              <div class="mr-4 mb-4" style="margin-top: -30px;">
+            <div class="pitch_form_wrapper pt-4">
+              <div id="form-invite">
+                <%= render 'users/dashboard/tabs/earn_points', invitation: @invitation %>
+              </div>
+              <div id="past-invites">
                 <h5 class="mb-3 font-weight-bold mt-4 pt-2">Past Invites</h5>
                 <% if @user.invitations.count.eql? 0 %>
                   <p>You haven't sent any invitations yet. Visit the "Earn Credits" tab to send your first invite.</p>
                 <% else %>
-                  <%= render_async_cache get_past_invites_path(id: @user.id), container_class: "pl-0", toggle: { selector: '#earn-points-tab-classic', event: :click } do %>
+                  <%= render_async_cache get_past_invites_path(id: @user.id), container_id: "past-invites-render-container", container_class: "pl-0", toggle: { selector: '#earn-points-tab-classic', event: :click } do %>
                     <div class="d-flex justify-content-center">
                       <div class="spinner-border" role="status">
                         <span class="sr-only">Loading...</span>
