--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -84,6 +84,9 @@ blockquote {
           <div class="flex_other_articles">
             <h3>Recommended in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
             <%= render_async_cache get_trending_posts_in_category_path(id: @post.id) %>
+            <div class="ads_wrapper ads_responsive">
+              <div class="content_hint"></div>
+            </div>
           </div>
         </div>
       </div>
