make promoting until nil when article is published and fix copy

--- a/app/views/invitations/partials/home/_confirmation_invite_sent.html.erb
+++ b/app/views/invitations/partials/home/_confirmation_invite_sent.html.erb
@@ -1,6 +1,6 @@
 <div class="pr-4">
   <h3 class="text-center">Your invite is on its way!</h3>
-  <p class="text-center">You can check the progress of your invitation under "Your invites". Remember that your friend must be accepted for you to get a promotion point.</p>
+  <p class="text-center">You can check the progress of your invitation under "Your invites". Remember that your friend must apply for you to get a promotion point.</p>
   <div style="max-width: 500px; margin: 0 auto;">
     <?xml version="1.0" encoding="UTF-8"?>
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="auto" viewBox="0 0 375 225" version="1.2">
