--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -42,7 +42,7 @@
               <div id="past-invites">
                 <h5 class="mb-3 font-weight-bold mt-4 pt-2">Past Invites</h5>
                 <% if @user.invitations.count.eql? 0 %>
-                  <p>You haven't sent any invitations yet. Visit the "Earn Credits" tab to send your first invite.</p>
+                  <p>You haven't sent any invitations yet.</p>
                 <% else %>
                   <%= render_async_cache get_past_invites_path(id: @user.id), container_id: "past-invites-render-container", container_class: "pl-0", toggle: { selector: '#earn-points-tab-classic', event: :click } do %>
                     <div class="d-flex justify-content-center">
