fixed ordering by two columns sql

--- a/app/views/users/dashboard/tabs/_earn_points.html.erb
+++ b/app/views/users/dashboard/tabs/_earn_points.html.erb
@@ -24,7 +24,7 @@
   </div>
   <small>
     When you click <i>Send Invite</i>, we will send an email inviting your friend(s) to apply to The Teen Magazine. The email will include a special apply link from you that will waive the cover letter and prioritize their application for review.
-    The referral link will expire in 1 week so they must apply before then to benefit from the easier application. For you to earn a promotional credit, your friend must submit their application to The Teen Magazine.
+    The referral link will expire in 1 week so they must apply before then to benefit from the easier application. For you to earn a promotional credit, your friend must apply to The Teen Magazine using your referral link.
   </small>
 <% end %>
 
