remove content hint

--- a/app/views/users/dashboard/tabs/_earn_points.html.erb
+++ b/app/views/users/dashboard/tabs/_earn_points.html.erb
@@ -1,6 +1,6 @@
 <h3 class="mb-3">Invite a friend to earn credits.</h3>
 <p>
-  Earn <b>1</b> promotion credit for friend you invite who applies to The Teen Magazine.
+  Earn <b>1</b> promotion credit for every friend you invite who applies to The Teen Magazine.
 </p>
 <%= form_for invitation, :remote=>true do |f| %>
   <% if invitation.errors.any? %>
