fixed editor email message

--- a/app/views/application_mailer/accepted_editor_email.html.erb
+++ b/app/views/application_mailer/accepted_editor_email.html.erb
@@ -16,7 +16,7 @@
       To view the changes made to your account, <a href="https://www.theteenmagazine.com/login">sign into your account</a>. You will be prompted to complete an onboarding process before accessing your new editor dashboard. The onboarding docs will explain the monthly assignments required to remain on the editor team.
     </p>
     <p>
-      The editor slack channel is where you'll be able to work with other editors and ask questions. You can join using the link here: <a href="https://join.slack.com/share/zt-jj8w6xdh-ZaPutwNnsvod83_Qf9OMSQ">https://join.slack.com/share/zt-jj8w6xdh-ZaPutwNnsvod83_Qf9OMSQ</a>. Please set up your profile (if you haven't already) and introduce yourself to the group. Let me know if you have any questions or if the link doesn't work. Congratulations and welcome to the team!
+      The editor slack channel is where you'll be able to work with other editors and ask questions. You should be getting an invite to your email soon with the login link. Please set up your profile (if you haven't already) and introduce yourself to the group. Let me know if you have any questions or if the link doesn't work. Congratulations and welcome to the team!
     </p>
     <p>Best Regards,<br>Mia Johansson</p><p>The Teen Magazine</p>
   </body>
