--- a/app/views/posts/partials/promoted/_all_promoted_articles.html.erb
+++ b/app/views/posts/partials/promoted/_all_promoted_articles.html.erb
@@ -1,3 +1,4 @@
+<div class="content_hint"></div>
 <div class="body welcome">
   <div class="wrapper_home">
     <h1 id="promoted-posts-title" class="section--title"><a href="/">More on The Teen Magazine</a></h1>
@@ -11,3 +12,4 @@
     <% end %>
   </div>
 </div>
+<div class="content_hint"></div>
