--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -8,7 +8,7 @@
    <div class="other--articles">
      <div class="flex">
        <div class="container">
-         <% @category_posts.each do |post| %>
+         <% @category_posts.each_with_index do |post, index| %>
            <div class="thumbnail">
              <div class="container--image">
                <%=link_to(image_tag(post.thumbnail.url(:large2), :class => "image_thumbnail"), post )%>
@@ -19,6 +19,9 @@
                <p class="date_post_preview"><%= post.publish_at.in_time_zone.strftime("%A, %b %d")%></p>
              </div>
            </div>
+           <% if (index + 1) % 2 == 0 %>
+            <div class="content_hint"></div>
+           <% end %>
          <% end %>
        </div>
        <a class="apply" href="/apply" target="blank">
