--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -108,6 +108,7 @@
     </div>
   </div>
 </div>
+<div class="content_hint"></div>
 
 <% @fraction = @points.to_f / 200.0 %>
 <% @progress = @fraction >= 1 ? 1 : @fraction %>
