--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,6 +19,7 @@
         <%= render_async_cache get_category_3_welcome_path, retry_count: 3 do %>
           <%= render "welcome/placeholders/category_row_placeholder" %>
         <% end %>
+        <div class="content_hint"></div>
       </div>
       <div class="most_read contain_articles">
         <div class="ads_wrapper">
@@ -62,7 +63,9 @@
         <br>
       </div>
     </div>
+    <div class="content_hint"></div>
     <h1 class="section--title mb-0"><a href="/search">Recent Articles</a></h1>
     <%= render_async_cache get_recent_posts_path, retry_count: 3 %>
+    <div class="content_hint"></div>
   </div>
 </div>
