added apply to ttm sidebar widget

--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -237,6 +237,14 @@ iframe {
   display: block;
   max-width: 400px;
   width: 100%;
+  margin: 0 auto;
+}
+
+.image_max_100_prcnt {
+  display: block;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
 .margin_top_20 {
