--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -84,7 +84,9 @@ blockquote {
           <div class="flex_other_articles">
             <div class="contain_articles">
               <h3>Recommended in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
-              <%= render_async_cache get_trending_posts_in_category_path(id: @post.id) %>
+              <%= render_async_cache get_trending_posts_in_category_path(id: @post.id) do %>
+                <div style="height: 366px; width: 100%; display: block; margin-bottom: 25px;"></div>
+              <% end %>
               <div id="subscribe-widget">
                 <h4>Subscribe to our weekly newsletter</h4>
                 <small class="sub-text">Get notified of the top trending articles every week!</small>
@@ -96,6 +98,7 @@ blockquote {
                   </div>
                 <% end %>
               </div>
+              <%= link_to (image_tag "open_applications_ttm.png", class: "image_max_100_prcnt", style: "padding-right: 15px; padding-bottom: 20px;"), new_apply_path, target: "_blank" %>
             </div>
           </div>
         </div>
