--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -5,24 +5,20 @@ pintrk('track', 'pagevisit');
 <!-- let someone create an application; sends to editor -->
 <%= image_tag "writer.jpg", id: "banner_writing" %>
 <div class="apply_wrapper">
-  <h2>Apply to The Teen Magazine Writer Team</h2>
+  <p style="font-weight: bold;">*Applications now open*</p>
+  <h2>Join Our Writer Team</h2>
   <p>
-    Our writer team is made up of hundreds of college and high school writers from around the world who
+    The Teen Magazine's writer team is made up of hundreds of college and high school writers from around the world who
     are passionate about improving their writing skills and are excited to connect with other like-minded writers.
   </p>
-<p>As a writer for The Teen Magazine, you will get the opportunity to:  </p>
-<ul>
-  <li>Pitch article topics and get published in an international online magazine</li>
-  <li>Have your own public author page that you can share with potential employers</li>
-  <li>Gain applicable experience and training in the editorial industry</li>
-  <li>Interview successful people and work with brands</li>
-  <li>Learn from and network with our talented writer community</li>
-</ul>
-<h4>What our writers say about The Teen Magazine</h4>
+<p>As a writer for The Teen Magazine, you will be contributing articles about being a teen, tackling topics that interest you and are relevant for other teenagers, giving advice, and more.
+  Submitted articles are sent to our talented team of editors who will give you feedback on your writing and will help you get your first article published.</p>
+<%= image_tag "open_applications_ttm.png", class: "image_max_100_prcnt" %>
+<p>Our custom writer platform works around your schedule, meaning that you can write articles and contribute to our writer community however much, or little, you have time for.</p>
+<h4>Here's what our writers say about The Teen Magazine</h4>
 <p><i>“The Teen Magazine is one of the most open platforms I've come across for aspiring writers and those who'd like to get an experience of what it's like to work in the journalism world. When I joined, I faced such a warm welcome from everyone and got the help I needed when I published my first article. I went from having to get help with my word choice and attaching images to being able to create an article and have it directly approved for publishing.”</i></p>
 <p><i>“I was limited to creating articles for my school's publication that sadly didn't get the success and recognition it actually deserved, pitching articles to websites without getting any response, and blogging regularly with no traffic. I really needed a place that can help publicize my work to a larger audience and help me improve and give me the constructive criticism I needed to achieve said improvement, and The Teen Magazine has provided all of that for me.”</i></p>
 <p><i>"When I became a writer for The Teen Magazine, I was just hoping for a simple activity. However, over the course of my experience here, it has become way more than that. To be able to have a role in the Entertainment industry and write articles that appear first on Google is amazing. I've gotten to meet and collaborate with young women all over the world and learn about their experiences and opinions. I would never change my experience at The Teen Magazine."</i></p>
-
 <h4>We hope you apply to our team, and we can’t wait to read your submission!</h4>
   <div id="submit-application-form">
     <%= form_for @application do |f| %>
