--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -247,9 +247,15 @@ $gray:  #2a2a2a;
  }
 }
 
+@media (max-width: 375px) {
+  .image_max_100_prcnt {
+    min-width: 100% !important;
+  }
+}
+
 @media (max-width: 550px) {
   .image_max_100_prcnt {
-    min-width: 100%;
+    min-width: 350px;
   }
   .contain_articles {
     padding: 0 !important;
