cleaned up styling

--- a/app/views/posts/partials/_trending.html.erb
+++ b/app/views/posts/partials/_trending.html.erb
@@ -6,4 +6,4 @@
     </div>
   </div>
 <% end %>
-<h6 style="margin-right: 20px; margin-top: -15px; margin-bottom: 25px; text-align: right;" class="trending_title"><i><%=link_to "See More", @trending.first.category %></i></h6>
+<h6 style="padding-right: 8px; margin-top: -15px; margin-bottom: 25px; text-align: right; width: 100%;" class="trending_title"><i><%=link_to "See More", @trending.first.category %></i></h6>
