--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -51,7 +51,7 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    padding: 15px 0 5px 15px;
+    padding: 15px;
     h3 {
       margin: 10px 0;
       padding: 0 20px 0 0px;
