updated styles in side trending articles to have more padding

--- a/app/views/posts/partials/_trending.html.erb
+++ b/app/views/posts/partials/_trending.html.erb
@@ -1,9 +1,8 @@
 <% @trending.each do |post| %>
-  <div class="ctgry_article">
+  <div class="ctgry_article" style="margin-bottom: 15px;">
     <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
     <div class="paragraph">
       <p><%= link_to(post.title.truncate_words(12), post) %></p>
     </div>
   </div>
 <% end %>
-<h6 style="padding-right: 8px; margin-top: -15px; margin-bottom: 25px; text-align: right; width: 100%;" class="trending_title"><i><%=link_to "See More", @trending.first.category %></i></h6>
