--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -85,9 +85,9 @@ blockquote {
             <div class="contain_articles">
               <h3>Recommended in <%= link_to(@post.category.name, @post.category, :class => "category_title_trending") %></h3>
               <%= render_async_cache get_trending_posts_in_category_path(id: @post.id) do %>
-                <div style="height: 366px; width: 100%; display: block; margin-bottom: 25px;"></div>
+                <div style="height: 366px; width: 100%; display: block; margin-bottom: 15px;"></div>
               <% end %>
-              <div id="subscribe-widget">
+              <div id="subscribe-widget" style="margin-top: 20px;">
                 <h4>Subscribe to our weekly newsletter</h4>
                 <small class="sub-text">Get notified of the top trending articles every week!</small>
                 <small id="result-text"></small>
