--- a/app/views/application_mailer/profile_approved.html.erb
+++ b/app/views/application_mailer/profile_approved.html.erb
@@ -9,8 +9,7 @@
 
   <body>
     <p>Hi <%= @user.first_name %>,</p>
-    <p>This is Khushi from The Teen Magazine. I wanted to let you know that your profile was just approved by one of our editors,
-       and you are now eligible to submit articles for publication! Log into your account here: <bold style="color: #4ABEB6;"><a href="https://www.theteenmagazine.com/login">theteenmagazine.com/login</a></bold> to see the changes.</p>
-    <p>Best,<br/>Khushi</p>
+    <p>Your profile was just approved by one of our editors, and you are now eligible to submit articles for publication! Log into your account here: <bold style="color: #4ABEB6;"><a href="https://www.theteenmagazine.com/login">theteenmagazine.com/login</a></bold> to see the changes.</p>
+    <p>Best,<br/>Editor team</p>
   </body>
 </html>
