--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -6,7 +6,7 @@
         <div style="padding-top: 30px;">
           <div class="classic-tabs"
             <% if @show_onboarding_full %>
-              data-step data-index="7" data-onboarding-content="Earn credits and boost your published articles to reach a wider audience."
+              data-step data-index="6" data-onboarding-content="Earn credits and boost your published articles to reach a wider audience."
             <% end %>
           >
             <ul class="nav mt-0" id="myClassicTab" role="tablist">
@@ -175,7 +175,7 @@
 <% if @show_badge_popup %>
   <script type="text/javascript">
     $(document).ready(function(){
-      $('#newBadgeModal').modal();
+      $('#newBadgeModal').modal({backdrop: 'static'});
     });
   </script>
 <% end %>
