uploaded september issue

--- a/app/views/layouts/writer.html.erb
+++ b/app/views/layouts/writer.html.erb
@@ -41,9 +41,9 @@
               <%= render "badges/new_badge_modal" %>
             <% end %>
               <header id="main_navigation" class="clearfix header-navigation">
-                <!-- <div class="banner_stts_relative">
-                  <p class= "banner_stts" style="background-color: #F0255E;">The Teen Magazine's August Issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
-                </div> -->
+                <div class="banner_stts_relative">
+                  <p class= "banner_stts" style="background-color: #F0255E;">The Teen Magazine's September Issue has been released! Download it for free <%= link_to("here", "/subscribe", class: "link_white", target: "_blank") %>.</p>
+                </div>
                 <div id="banner">
                   <div class="flex-1">
                     <svg width="20px" height="20px" onclick="toggleNav();" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" class="toggle-nav svg-inline--fa fa-bars fa-w-14" role="img" viewBox="0 0 448 512">
