--- a/app/views/pages/issue.html.erb
+++ b/app/views/pages/issue.html.erb
@@ -1,7 +1,7 @@
 <div class="skinny_wrapper">
-  <h1 class="title mt-4">You've just received access to The Teen Magazine's August Issue!</h1>
-  <p><a target="_blank" class="link_grn" href="https://s3.amazonaws.com/media.theteenmagazine.com/August_2021-compressed.pdf">View pdf in new tab.</a></p>
-  <iframe src="https://s3.amazonaws.com/media.theteenmagazine.com/August_2021-compressed.pdf" width="100%" height="1200" style="border: none;"> </iframe>
+  <h1 class="title mt-4">You've just received access to The Teen Magazine's September Issue!</h1>
+  <p><a target="_blank" class="link_grn" href="https://s3.amazonaws.com/media.theteenmagazine.com/September+2021-min.pdf">View pdf in new tab.</a></p>
+  <iframe src="https://s3.amazonaws.com/media.theteenmagazine.com/September+2021-min.pdf" width="100%" height="1200" style="border: none;"> </iframe>
   <br/>
   <br/>
   <br/>
